Conclusão do projeto

--- a/index5/index5.html
+++ b/index5/index5.html
@@ -84,6 +84,9 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        Feito por Leonardo Farias
+    </footer>
 </body>
 
 </html>
