Conclusão do projeto

--- a/index5/index5.html
+++ b/index5/index5.html
@@ -78,7 +78,7 @@
             </div>
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Instagran</h2>
+                    <h2>Instagram</h2>
                     <p>Mais do meu dia-a-dia ;)</p>
                 </div>
             </div>
